2011-05-01  Robert Larice
 * src/frontend/parser/complete.c ,
 * src/include/cpextern.h :
    rename variable class  -->  kw_class

2011-05-01  Robert Larice
 * src/spicelib/analysis/analysis.c ,
 * src/spicelib/analysis/analysis.h ,
 * src/spicelib/analysis/cktdojob.c ,
 * src/spicelib/analysis/ckttroub.c :
    rename struct member public  -->  if_analysis

2011-05-01  Robert Larice
 * src/frontend/help/x11disp.c :
    rename function delete  -->  delete_w

2011-05-01  Robert Larice
 * src/spicelib/parser/inpaname.c ,
 * src/spicelib/parser/inpdpar.c ,
 * src/spicelib/parser/inppname.c ,
 * src/xspice/mif/mifgetmod.c :
    mop up, in the shadow of the last two commits

2011-05-01  Robert Larice
 * src/spicelib/parser/inpgmod.c ,
 * src/xspice/mif/mifgetmod.c :
    cleanup, (modtmp) --> modtmp

2011-05-01  Robert Larice
 * src/spicelib/parser/inpaname.c ,
 * src/spicelib/parser/inpdpar.c ,
 * src/spicelib/parser/inpgmod.c ,
 * src/spicelib/parser/inppname.c ,
 * src/spicelib/parser/inptyplk.c ,
 * src/xspice/mif/mifgetmod.c :
    cleanup, some more (*p).foo  -->  p->foo

2011-04-30  Robert Larice
 * src/spicelib/devices/cktbindnode.c ,
 * src/spicelib/devices/hisimhv/hsmhvmask.c ,
 * src/spicelib/devices/hisimhv/hsmhvpzld.c :
    c89 compatibility, move NG_IGNORE() after declarations

2011-04-30  Robert Larice
 * src/spicelib/devices/hisimhv/hsmhvask.c ,
 * src/spicelib/devices/hisimhv/hsmhvld.c ,
 * src/spicelib/devices/hisimhv/hsmhvmask.c ,
 * src/spicelib/devices/hisimhv/hsmhvpar.c ,
 * src/spicelib/devices/hisimhv/hsmhvpzld.c :
    warnings, use NG_IGNORE()

2011-04-30  Robert Larice
 * configure.ac :
    re-enable unused-parameter Warnings

2011-04-30  Robert Larice
 * **/*	:
    various cleanups
    - usage of cp_getvar(), receives a void* in the third arg, thus remove casts
      FIXME, this function signature is error prone
    - use NG_IGNORE()
    - casts and prototypes

2011-04-29  Robert Larice
 * src/spicelib/devices/hisimhv/hsmhvnoi.c ,